mType/tests/testFiles/import/error/library/importLibEmptyName.mt
// Test: import lib with empty name should error
import lib "";

print("Should not reach here");
